@@ -12,6 +12,8 @@ Revision history for Perl module Git::PurePerl:
        email fields (thanks to martijn)
      - add the parent field to a new commit when available (thanks
        to martijn)
+     - allow bare repositories with the gitdir parameter (thanks
+       to martijn)
 
 0.40 Fri Mar 13 15:29:02 GMT 2009
      - Skip protocol tests on Win32 (thanks to fayland)
